# mini_agent_cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mini_agent_cli/: __init__.py  __main__.py  agent.py  cli.py  full_agent.py  skills.py  todo.py  workspace.py
skills/repo-iteration/: SKILL.md
tests/: test_smoke.py
