[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agent-cli"
version = "0.1.0"
description = "Full comprehensive coding agent CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anthropic>=0.25.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
mini-agent = "mini_agent_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mini_agent_cli*"]